--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -189,7 +189,7 @@ import Mussels from "../assets/images/mussels2.png";
         </p>
 
         <div class="mt-8">
-          <Button color="secondary" url="/book">Book now</Button>
+          <Button variant="cta" url="/book">Book now</Button>
         </div>
       </div>
       <div slot="hero-content-right">
@@ -297,7 +297,7 @@ import Mussels from "../assets/images/mussels2.png";
           </span>
 
           <div class="mt-8">
-            <Button color="secondary" url="/book">Book a table</Button>
+            <Button variant="cta" url="/book">Book a table</Button>
           </div>
         </div>
       </div>
