--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -3,6 +3,8 @@ import "../styles/global.css";
 import { ClientRouter } from "astro:transitions";
 import Header from "../components/Header.astro";
 import Footer from "../components/Footer.astro";
+import ScrollToTop from "../components/ScrollToTop.astro";
+import MobileToolbar from "../components/MobileToolbar.astro";
 import { siteLang, siteName, siteDomain } from "../data/config";
 
 const { pageTitle, title, description } = Astro.props;
@@ -59,5 +61,7 @@ const fullTitle = pageTitle ? `${pageTitle} | ${siteName}` : siteName;
       <slot />
     </main>
     <Footer />
+    <ScrollToTop />
+    <MobileToolbar />
   </body>
 </html>
