--- a/src/components/WideImage.astro
+++ b/src/components/WideImage.astro
@@ -1,6 +1,6 @@
 ---
 import { Picture } from "astro:assets";
-const { image, alt, class: className } = Astro.props;
+const { image, alt, class: className, loading = "lazy" } = Astro.props;
 ---
 
-<Picture src={image} alt={alt} class:list={[className, "object-cover object-center w-full"]} />
+<Picture src={image} alt={alt} loading={loading} class:list={[className, "object-cover object-center w-full"]} />
